# actions-ex

./: .gitignore  .ninja_log  Build-EnvScript.ps1  CMakeLists.txt  LICENSE  README.md  actions.yml  build.ninja  cmds.js  cmds.js.map  index.md  log1.txt  probe.cmd  set-msvc-env.ps1  tasks.js  tasks.mjs  test.cmd
.github/workflows/: main.yml
app/: CMakeLists.txt  main.cpp  pch.h
cmds/: cmds.ts  package.json  pnpm-lock.yaml  tasks.mjs  tsconfig.json
